--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="10dp"
         android:textAlignment="center"
         android:id="@+id/name_welcome"
-        android:text="呵呵哒"
+        android:text="@string/app_name"
         android:textColor="#f0f0f0"
         android:layout_centerHorizontal="true"
         android:textSize="36sp"
