--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,9 @@
 <TextView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/show_data"/>
+    android:id="@+id/show_data"
+    android:textSize="20dp"
+    android:text="正在加载。。。"/>
 
 
     <android.support.v4.view.ViewPager
