--- a/app/src/main/res/layout/weather_view.xml
+++ b/app/src/main/res/layout/weather_view.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/bg"
-    android:background="@mipmap/bg_snow"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/header_bg"
+        android:src="@mipmap/bg_cloud"
+        android:scaleType="centerCrop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
     <ScrollView
@@ -11,7 +17,6 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:background="#eeeeee"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -22,10 +27,10 @@
             <!--android:text="Hello World!" />-->
 
             <RelativeLayout
-                android:id="@+id/header_bg"
-                android:background="@mipmap/bg_duoyu"
+
                 android:layout_width="match_parent"
                 android:layout_height="300dp">
+
 
                 <LinearLayout
                     android:id="@+id/header_centerinfo"
@@ -38,6 +43,7 @@
 
 
                     <TextView
+                        android:layout_marginTop="30dp"
                         android:paddingBottom="0dp"
                         android:paddingLeft="70dp"
                         android:id="@+id/nowTem"
@@ -156,7 +162,7 @@
                 <LinearLayout
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:background="#ffffff"
+                    android:background="#45efefee"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -375,7 +381,7 @@
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:orientation="vertical"
-                android:background="#fafafa"
+                android:background="#56fafafa"
                 android:layout_marginTop="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -566,7 +572,7 @@
             <!--footer1-->
             <LinearLayout
                 android:layout_marginTop="5dp"
-                android:background="#ffffff"
+                android:background="#77ffffff"
                 android:padding="7dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -612,7 +618,7 @@
             <!--footer2-->
             <LinearLayout
                 android:layout_marginTop="5dp"
-                android:background="#ffffff"
+                android:background="#77ffffff"
                 android:padding="7dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -659,7 +665,7 @@
             <!--footer3-->
             <LinearLayout
                 android:layout_marginTop="5dp"
-                android:background="#ffffff"
+                android:background="#77ffffff"
                 android:padding="7dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -707,7 +713,7 @@
             <!--footer4-->
             <LinearLayout
                 android:layout_marginTop="5dp"
-                android:background="#ffffff"
+                android:background="#77ffffff"
                 android:padding="7dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -754,7 +760,7 @@
             <!--footer5-->
             <LinearLayout
                 android:layout_marginTop="5dp"
-                android:background="#ffffff"
+                android:background="#77ffffff"
                 android:padding="7dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -801,7 +807,7 @@
             <!--footer6-->
             <LinearLayout
                 android:layout_marginTop="5dp"
-                android:background="#ffffff"
+                android:background="#77ffffff"
                 android:padding="7dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -848,7 +854,7 @@
             <!--footer7-->
             <LinearLayout
                 android:layout_marginTop="5dp"
-                android:background="#ffffff"
+                android:background="#77ffffff"
                 android:padding="7dp"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
@@ -893,13 +899,6 @@
             </LinearLayout>
 
 
-
-
-
-
-
-
-
         </LinearLayout>
 
 
@@ -909,4 +908,3 @@
 
 
 </RelativeLayout>
-
